# code-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: projects.yaml
src/code_rag/: config.py  main.py
src/code_rag/api/: index.py  projects.py  router.py  search.py
src/code_rag/indexer/: chunker.py  embedder.py  hasher.py  pipeline.py  scanner.py  text_chunker.py
src/code_rag/models/: chunk.py  project.py  search.py
src/code_rag/storage/: qdrant.py  state.py
src/code_rag/utils/: filters.py  language.py
